// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebhooksControls should match a snapshot for the /webhooks/about page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <button
        class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        Video
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <button
      class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
    >
      Video
      <div
        class="e1q1vabn-el-button-loader"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WebhooksControls should match a snapshot for the /webhooks/logs page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1v6agxr-el-border-radius o27jdjf-overflow-hidden ehvkknk-el-mb5"
      >
        <div
          class="c1dc4ecv-controls-container"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <select
              class="e1yw9yco-el-wfull e60u3kb-el-select"
              name="applicationId"
            >
              <option
                value=""
              >
                None selected
              </option>
              <option
                value="MOCK_APP_ID"
              >
                MOCK_APP_NAME
              </option>
              <option
                value="MOCK_OTHER_APP_ID"
              >
                MOCK_APP_NAME_ANOTHER
              </option>
            </select>
            <label
              class="e1nbkkrq-el-label"
            >
              App Name
            </label>
          </div>
        </div>
        <div
          class="c1dc4ecv-controls-container"
        >
          <div
            class="iru95t9-input-full-width e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              max="2019-10-10"
              min="2019-04"
              name="from"
              type="date"
              value="2019-10-10"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Date From
            </label>
          </div>
        </div>
        <div
          class="c1dc4ecv-controls-container"
        >
          <div
            class="iru95t9-input-full-width e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              max="2019-10-10"
              min="2019-10-10"
              name="to"
              type="date"
              value="2019-10-10"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Date To
            </label>
          </div>
        </div>
        <div
          class="c1dc4ecv-controls-container"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <select
              class="e1yw9yco-el-wfull e60u3kb-el-select"
              name="topicId"
            >
              <option
                value=""
              >
                None selected
              </option>
              <option
                value="properties.created"
              >
                Property created
              </option>
              <option
                value="properties.modified"
              >
                Property modified
              </option>
            </select>
            <label
              class="e1nbkkrq-el-label"
            >
              Topic Name
            </label>
          </div>
        </div>
        <div
          class="c1dc4ecv-controls-container"
        >
          <div
            class="iru95t9-input-full-width e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="entityId"
              type="text"
              value=""
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Entity Id
            </label>
          </div>
        </div>
        <div
          class="c1dc4ecv-controls-container"
        >
          <div
            class="iru95t9-input-full-width e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="eventId"
              type="text"
              value=""
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Event Id
            </label>
          </div>
        </div>
      </div>
      <button
        class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        View Docs
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        Video
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1v6agxr-el-border-radius o27jdjf-overflow-hidden ehvkknk-el-mb5"
    >
      <div
        class="c1dc4ecv-controls-container"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <select
            class="e1yw9yco-el-wfull e60u3kb-el-select"
            name="applicationId"
          >
            <option
              value=""
            >
              None selected
            </option>
            <option
              value="MOCK_APP_ID"
            >
              MOCK_APP_NAME
            </option>
            <option
              value="MOCK_OTHER_APP_ID"
            >
              MOCK_APP_NAME_ANOTHER
            </option>
          </select>
          <label
            class="e1nbkkrq-el-label"
          >
            App Name
          </label>
        </div>
      </div>
      <div
        class="c1dc4ecv-controls-container"
      >
        <div
          class="iru95t9-input-full-width e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            max="2019-10-10"
            min="2019-04"
            name="from"
            type="date"
            value="2019-10-10"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Date From
          </label>
        </div>
      </div>
      <div
        class="c1dc4ecv-controls-container"
      >
        <div
          class="iru95t9-input-full-width e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            max="2019-10-10"
            min="2019-10-10"
            name="to"
            type="date"
            value="2019-10-10"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Date To
          </label>
        </div>
      </div>
      <div
        class="c1dc4ecv-controls-container"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <select
            class="e1yw9yco-el-wfull e60u3kb-el-select"
            name="topicId"
          >
            <option
              value=""
            >
              None selected
            </option>
            <option
              value="properties.created"
            >
              Property created
            </option>
            <option
              value="properties.modified"
            >
              Property modified
            </option>
          </select>
          <label
            class="e1nbkkrq-el-label"
          >
            Topic Name
          </label>
        </div>
      </div>
      <div
        class="c1dc4ecv-controls-container"
      >
        <div
          class="iru95t9-input-full-width e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="entityId"
            type="text"
            value=""
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Entity Id
          </label>
        </div>
      </div>
      <div
        class="c1dc4ecv-controls-container"
      >
        <div
          class="iru95t9-input-full-width e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="eventId"
            type="text"
            value=""
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Event Id
          </label>
        </div>
      </div>
    </div>
    <button
      class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
    >
      View Docs
      <div
        class="e1q1vabn-el-button-loader"
      />
    </button>
    <button
      class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
    >
      Video
      <div
        class="e1q1vabn-el-button-loader"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WebhooksControls should match a snapshot for the /webhooks/manage page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1v6agxr-el-border-radius o27jdjf-overflow-hidden ehvkknk-el-mb5"
      >
        <div
          class="c1dc4ecv-controls-container"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <select
              class="e1yw9yco-el-wfull e60u3kb-el-select"
              name="applicationId"
            >
              <option
                value=""
              >
                None selected
              </option>
              <option
                value="MOCK_APP_ID"
              >
                MOCK_APP_NAME
              </option>
              <option
                value="MOCK_OTHER_APP_ID"
              >
                MOCK_APP_NAME_ANOTHER
              </option>
            </select>
            <label
              class="e1nbkkrq-el-label"
            >
              App Name
            </label>
          </div>
        </div>
      </div>
      <button
        class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        View Docs
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        Video
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1v6agxr-el-border-radius o27jdjf-overflow-hidden ehvkknk-el-mb5"
    >
      <div
        class="c1dc4ecv-controls-container"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <select
            class="e1yw9yco-el-wfull e60u3kb-el-select"
            name="applicationId"
          >
            <option
              value=""
            >
              None selected
            </option>
            <option
              value="MOCK_APP_ID"
            >
              MOCK_APP_NAME
            </option>
            <option
              value="MOCK_OTHER_APP_ID"
            >
              MOCK_APP_NAME_ANOTHER
            </option>
          </select>
          <label
            class="e1nbkkrq-el-label"
          >
            App Name
          </label>
        </div>
      </div>
    </div>
    <button
      class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
    >
      View Docs
      <div
        class="e1q1vabn-el-button-loader"
      />
    </button>
    <button
      class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
    >
      Video
      <div
        class="e1q1vabn-el-button-loader"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WebhooksControls should match a snapshot for the /webhooks/new page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <button
        class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        Video
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <button
      class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
    >
      Video
      <div
        class="e1q1vabn-el-button-loader"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
